fixed css and know that the nav bar might be covering some of the forms and so move the forms down a bit

--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -4,3 +4,7 @@ button{
     color: white;
     background-color: red;
 }
+
+.loginFormDiv{
+    margin-top: 200px;
+}
